charts/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: eks-flask-demo-a
spec:
  replicas: 1
  selector:
    matchLabels:
      app: eks-flask-demo-a # Add this label
  template:
    metadata:
      labels:
        app: eks-flask-demo-a
    spec:
      containers:
      - name: eks-flask-demo-a
        image: malibo8407/eks-poc-flask:v4
        ports:
        - containerPort: 8080
